public/styles/main.css
/* ... */
#livestreamVideoContainer .placeholder .text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
}
.lity-close {
    display: none;
}
.lity-content .closebtn {
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    width: 20px;
    height: 20px;
    cursor: pointer;
}
.lity-container {
    height: 100%;
    width: 100%;
}
#livestreamVideoContainer .flex {
    display: flex;
}
#livestreamVideoContainer .flex .left {
    flex: 1 1 auto;
    max-width: 270px;
    padding: 0 30px 40px;
    flex-wrap: wrap;
}
#livestreamVideoContainer .flex .left .bottom {
    flex: auto;
    align-self: flex-end;
}

#livestreamVideoContainer .flex .videoContainer {
    overflow: hidden;
    flex: 1 1 auto;
    height: calc(100vh - 35px);
}
#livestreamVideoContainer .flex iframe {
    height: 100%;
    width: 100%;
}
/*

END LIVE STREAM

 */

 /* Left sticky div*/
 .mainContent {
    display: flex;
    flex-direction: column;
    height: calc(100% - 20px);
    width: 100%;
 }
 .mainContent .leftSticky {
    cursor: pointer;
    flex: 0 0 auto;
    display: flex;
    color: #ffff00;
    flex-direction: column;
    margin-left: 20px;
    margin-top: 30px;
 }
 .mainContent .rightBox {
     margin-top: 20px;
 }
 .mainContent .leftStickyHeader {
    display: flex;
    flex: 0 0 auto;
    font-family: 'GravurCondensed-Light', sans-serif;
    font-size: 22px;
    line-height: 27px;
    letter-spacing: 0;
    margin-bottom: 30px;
}

 .mainContent .leftStickyJoan {
    flex: 0 0 auto;
    flex-direction: column;
    font-family: 'GravurCondensed-Light', sans-serif;
    font-size: 22px;
    line-height: 27px;
    letter-spacing: 0;
 }
 .mainContent .leftStickyJoan .thin {
    font-family: 'GravurCondensed-Thin', sans-serif;
 }

.mainContent .rightBox {
    display: inline-flex;
    position: relative;
    height: 100%;
}
 .videoLinks {
    font-family: 'GravurCondensed-Regular', sans-serif;
    color: #ffff00;
    font-size: 13px;
    line-height: 14px;
    max-width: 181px;
    margin-left: 20px;
    padding-top: 20px;
}
.videoLinks div {
    font-family: 'GravurCondensed-Regular', sans-serif;
    border: .5px solid rgba(255, 240, 0, 0);
    cursor: pointer;
    color: #fff000;
    font-size: 13px;
    text-transform: uppercase;
    line-height: 14px;

    margin-bottom: 7.25px;
    padding: 7.75px 6.75px;
}

.videoLinks .active {
    border: .5px solid rgba(255, 240, 0, 1);
}
.videoLinks .div:hover {
    border: .5px solid rgba(255, 240, 0, 1);
}

.videoLinks .joanjonas_text_button:hover {
    border: .5px solid rgba(255, 240, 0, 1);
}

/* Owl Carousel */
.carouselWrapper .owl-carousel{
    position: relative;
    max-width: calc(100% - 80px)
}

.carouselWrapper {
    display: flex;
}

.carouselWrapper .control {
    position: relative;
    width: 40px;
    cursor: pointer;
}

.carouselWrapper .control.prev span, .carouselWrapper .control.next span {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    cursor: pointer;
}

/*
    START Social Media Icons
 */
.share {
    display: none; /*change back to inline-block */
}
.share img {
    height: 20px;
}
/*
    END Social Media Icons
 */

@media (max-width: 768px) {
    .carouselWrapper .control.prev span, .carouselWrapper .control.next span {
        position: absolute;
        left: 50%;
        transform: translateX(-50%);
        cursor: pointer;
    }
}

@media (min-width: 768px) {
    #livestream .titlewrap {
        width: 360px;
    }

    #livestream .titlewrap .wrapper.marquee {
        padding-left: 360px;
    }

    #livestream svg {
        margin: 0 20px 0 30px;
    }

    .carouselWrapper .control.prev span {
        /*left: -100px;*/
        left: 20px;

        -webkit-transition: left 1s;
        -moz-transition: left 1s;
        -ms-transition: left 1s;
        -o-transition: left 1s;
        transition: left 1s;
    }
    .carouselWrapper .control.prev:hover span {
        left: 20px;
        color: #ffff00;
    }


    .carouselWrapper .control.next span {
        /*right: -100px;*/
        right: 20px;

        -webkit-transition: right 1s;
        -moz-transition: right 1s;
        -ms-transition: right 1s;
        -o-transition: right 1s;
        transition: right 1s;
    }
    .carouselWrapper .control.next:hover span {
        right: 20px;
        color: #ffff00;
    }

    .mainContent {
        height: calc(100% - 118px);
        flex-direction: row;
        position: relative;
    }

    body.livestream .mainContent {
        height: calc(100% - 98px);
    }
    #livestream .watchnow {
        display: inline-block;
    }
    #livestream .dot.animate-flicker {
        display: inline-block;
    }
    .mainContent .leftSticky {
        flex: 1 0 250px;
        min-width: 250px;
        max-width: 250px;
        margin-left: 30px;
    }
    .mainContent .rightBox {
        flex: 1 1 auto;
        margin-top: 20px;
        margin-right: 30px;
    }

    .videoLinks {
        position: absolute;
        bottom: 0;
        margin-left: 30px;
    }
}

@keyframes flickerAnimation {
    0%   { opacity:1; }
    50%  { opacity:0; }
    100% { opacity:1; }
}
@-o-keyframes flickerAnimation{
    0%   { opacity:1; }
    50%  { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes flickerAnimation{
    0%   { opacity:1; }
    50%  { opacity:0; }
    100% { opacity:1; }
}
@-webkit-keyframes flickerAnimation{
    0%   { opacity:1; }
    50%  { opacity:0; }
    100% { opacity:1; }
}
.animate-flicker {
    -webkit-animation: flickerAnimation 2s infinite;
    -moz-animation: flickerAnimation 2s infinite;
    -o-animation: flickerAnimation 2s infinite;
    animation: flickerAnimation 2s infinite;
}
/* ... */

